deployment/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-key-server-service
  labels:
    app: fc-key-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    app: fc-key-server
  type: LoadBalancer
